# industry_digitalization

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/client/: client  client.cpp
app/src/: client.cpp  main.cpp  main1.cpp
libs/Box/: CMakeLists.txt
libs/Box/include/: Box.hpp
libs/Box/src/: Box.cpp
libs/Cobot/: CMakeLists.txt
libs/Cobot/include/: Cobot.hpp
libs/Cobot/src/: Cobot.cpp
libs/Item/: CMakeLists.txt
libs/Item/include/: Item.hpp
libs/Item/src/: Item.cpp
libs/MVSystem/: CMakeLists.txt
libs/MVSystem/include/: MVSystem.hpp
libs/MVSystem/src/: MVSystem.cpp
libs/MobileRobot/: CMakeLists.txt
libs/MobileRobot/include/: MobileRobot.hpp
libs/MobileRobot/src/: MobileRobot.cpp
libs/Monitor/: CMakeLists.txt
libs/Monitor/include/: Monitor.hpp
libs/Monitor/src/: Monitor.cpp
libs/PickPlace/: CMakeLists.txt
libs/PickPlace/include/: PickPlace.hpp
libs/PickPlace/src/: PickPlace.cpp
libs/RW/: CMakeLists.txt
libs/RW/include/: RW.hpp
libs/RW/src/: RW.cpp
libs/WareHouse_DB/: CMakeLists.txt
libs/WareHouse_DB/include/: WareHouse_DB.hpp
libs/WareHouse_DB/src/: WareHouse_DB.cpp
libs/data_mng/: CMakeLists.txt
libs/data_mng/include/: data_mng.h
libs/data_mng/src/: data_mng.cpp
libs/socket/: CMakeLists.txt
libs/socket/include/: Server.h  Socket.h
libs/socket/src/: Client.cpp  Server.cpp  Socket.c  Socket.cpp
mv_readings/: arrivi_linea_a.txt  arrivi_linea_b.txt  arrivi_linea_c.txt
